--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity android:name=".Activity.MultiMotorActivityP2" />
         <activity
             android:name=".Activity.ConnectionTestActivity"
-            android:theme="@style/AppThemeNavBar" />
+            android:theme="@style/AppThemeNavBar"
+            android:parentActivityName=".Activity.MainMenuActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
