--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:name=".Activity.MotorActivity" />
+        <activity
+            android:name=".Activity.MotorActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".Activity.MainMenuActivity"
             android:theme="@style/AppTheme">
@@ -34,12 +36,8 @@
         <activity android:name=".Activity.MultiMotorActivityP2" />
         <activity
             android:name=".Activity.ConnectionTestActivity"
-<<<<<<< HEAD
             android:theme="@style/AppThemeNavBar"
             android:parentActivityName=".Activity.MainMenuActivity" />
-=======
-            android:theme="@style/AppThemeNavBar" />
->>>>>>> parent of 52ee400... up
 
         <meta-data
             android:name="preloaded_fonts"
