--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.adev.android.legomindfuck"
+        applicationId "com.adev.android.legomindfuQ"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
